Modified customer workflow, deleted logic from jsp and transfered to controller